fix overflow-x

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,7 @@
 
 *{
   font-family: 'Noto Serif JP', serif;
+  overflow-x: hidden;
 }
 
 body {
